--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "pug": "^2.0.4",
     "sequelize": "^5.19.6",
     "sequelize-cli": "^5.5.1",
     "uuid": "^3.3.3"
