--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^7.0.0",
+    "bcrypt": "^3.0.6",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
+    "dump-die": "^1.0.0",
     "express": "^4.17.1",
+    "express-dynamic-helpers-patch": "^0.0.2",
+    "express-session": "^1.17.0",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
